force-app/main/default/objects/PricebookEntry/fields/chargebeeapps__Addon_Applicability__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Addon_Applicability__c</fullName>
    <label>Addon Applicability</label>
    <type>TextArea</type>
</CustomField>