force-app/main/default/objects/PricebookEntry/fields/chargebeeapps__Chargebee_Modified_Time__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Chargebee_Modified_Time__c</fullName>
    <description>Chargebee_Modified_Time</description>
    <label>Chargebee Modified Time</label>
    <type>DateTime</type>
</CustomField>