force-app/main/default/objects/PricebookEntry/fields/chargebeeapps__Currency__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Currency__c</fullName>
    <label>Currency</label>
    <length>50</length>
    <type>Text</type>
</CustomField>