force-app/main/default/objects/PricebookEntry/fields/chargebeeapps__Free_Quantity__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Free_Quantity__c</fullName>
    <description>Free Quantity</description>
    <label>Free Quantity</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>