force-app/main/default/objects/PricebookEntry/fields/chargebeeapps__Invoice_Name__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Invoice_Name__c</fullName>
    <label>Invoice Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>