force-app/main/default/objects/PricebookEntry/fields/chargebeeapps__Pricing_Model__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Pricing_Model__c</fullName>
    <label>Pricing Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>