force-app/main/default/objects/PricebookEntry/fields/chargebeeapps__Setup_Cost__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Setup_Cost__c</fullName>
    <description>Setup cost for each product in each pricebook</description>
    <label>Setup Cost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>