force-app/main/default/objects/PricebookEntry/fields/chargebeeapps__Site__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Site__c</fullName>
    <label>Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>