force-app/main/default/objects/PricebookEntry/fields/ia_crm__Last_sync_with_Intacct__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Last_sync_with_Intacct__c</fullName>
    <label>Last sync with Intacct</label>
    <type>DateTime</type>
</CustomField>