force-app/main/default/objects/PricebookEntry/fields/ia_crm__Tier_Pricing__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Tier_Pricing__c</fullName>
    <label>Tier Pricing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>