force-app/main/default/objects/PricebookEntry/fields/Old_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Old_List_Price__c</fullName>
    <label>Old List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>