force-app/main/default/objects/PricebookEntry/fields/Price_Book_Entry_Id_18__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Entry_Id_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Price Book Entry Id 18</label>
    <type>Text</type>
</CustomField>